--- a/app/globals.css
+++ b/app/globals.css
@@ -58,7 +58,7 @@
     --ring: hsl(0 0% 3.9%);
     --radius: 0.5rem;
 
-    --sidebar-background: 0 0% 98%;
+    --sidebar-background: hsl(0 0% 98%);
     --sidebar-foreground: 240 5.3% 26.1%;
     --sidebar-primary: 240 5.9% 10%;
     --sidebar-primary-foreground: 0 0% 98%;
